--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "socket.io-client": "^4.7.3",
-    "zustand": "^4.4.0"
+    "zustand": "^4.4.0",
+    "next-intl": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
