--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,39 @@
-# OpenAI API Key for LLM phrase generation
+# EMOGUCHI Environment Configuration
+
+# Server Settings
+HOST=0.0.0.0
+PORT=8000
+
+# OpenAI API
 OPENAI_API_KEY=your_openai_api_key_here
 
-# Debug API Token for development
-DEBUG_API_TOKEN=debug-token-123
+# Game Settings
+MAX_PLAYERS_PER_ROOM=8
+DEFAULT_VOTE_TIMEOUT=30
+PHRASE_CACHE_SIZE=10
 
-# Frontend API URL
-NEXT_PUBLIC_API_URL=http://localhost:8000
+# Storage Configuration
+# Options: "local" (development) or "s3" (production)
+STORAGE_TYPE=local
+LOCAL_AUDIO_DIR=./uploads/audio
+
+# S3 Settings (only needed if STORAGE_TYPE=s3)
+S3_BUCKET=emoguchi-audio
+S3_REGION=ap-northeast-1
+AWS_ACCESS_KEY_ID=your_aws_access_key
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+
+# Database Configuration
+# Options: "sqlite" (development) or "postgresql" (production)
+DATABASE_TYPE=sqlite
+SQLITE_DB_PATH=./emoguchi.db
+
+# PostgreSQL Settings (only needed if DATABASE_TYPE=postgresql)
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=emoguchi
+POSTGRES_USER=emoguchi
+POSTGRES_PASSWORD=your_postgres_password
+
+# Debug
+DEBUG_API_TOKEN=debug-token-123
