--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,3 +23,12 @@ numpy<2.0.0  # PyTorch compatibility
 # Additional ML dependencies
 scipy>=1.9.0
 scikit-learn>=1.3.0
+
+# Storage (optional for production S3)
+boto3>=1.26.0
+
+# Database
+sqlalchemy>=2.0.0
+alembic>=1.12.0
+asyncpg>=0.29.0  # PostgreSQL async driver
+aiosqlite>=0.19.0  # SQLite async driver
