--- a/.env.example
+++ b/.env.example
@@ -17,11 +17,19 @@ PHRASE_CACHE_SIZE=10
 STORAGE_TYPE=local
 LOCAL_AUDIO_DIR=./uploads/audio
 
-# S3 Settings (only needed if STORAGE_TYPE=s3)
-S3_BUCKET=emoguchi-audio
-S3_REGION=ap-northeast-1
-AWS_ACCESS_KEY_ID=your_aws_access_key
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+# Storage Settings - R2とS3は同じS3互換APIを使用
+# R2を使う場合も STORAGE_TYPE=s3 に設定
+STORAGE_TYPE=local  # "local" または "s3"
+
+# R2/S3共通設定（どちらも必須）
+S3_BUCKET=emoguchi-audio        # バケット名
+S3_REGION=auto                  # R2: "auto", S3: "ap-northeast-1"など
+AWS_ACCESS_KEY_ID=your_key      # R2/S3のアクセスキー
+AWS_SECRET_ACCESS_KEY=your_secret # R2/S3のシークレットキー
+
+# R2を使う場合のみ追加で必要
+R2_ENDPOINT_URL=https://<account-id>.r2.cloudflarestorage.com
+R2_ACCOUNT_ID=your_cloudflare_account_id
 
 # Database Configuration
 # Options: "sqlite" (development) or "postgresql" (production)
