--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,9 @@ node_modules/
 kushinada-hubert-large
 kushinada-hubert-large.zip
 kushinada-hubert-large.tar.gz
-backend/__pycache__/kushinada_infer.cpython-310.pyc
+backend/__pycache__/
+backend/__pycache__/
+backend/api/__pycache__/
+backend/models/__pycache__/
+backend/services/__pycache__/
+backend/sockets/__pycache__/
