--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,10 +9,10 @@ jobs:
   deploy:
     name: Deploy backend to Fly.io
     runs-on: ubuntu-latest
-      defaults:
-      run:
-        working-directory: backend  # ← ここがポイント
 
+    defaults:
+      run:
+        working-directory: backend
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -21,6 +21,6 @@ jobs:
         uses: superfly/flyctl-actions/setup-flyctl@master
 
       - name: Deploy to Fly.io
-        run: flyctl deploy --config backend/fly.toml --dockerfile backend/Dockerfile --remote-only
+        run: flyctl deploy --config fly.toml --dockerfile Dockerfile --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
