healthチェックポイントを変更

--- a/fly.toml
+++ b/fly.toml
@@ -23,11 +23,11 @@ primary_region = "nrt"  # Tokyo region for lower latency
 # Health check configuration
 [http_service.checks]
   [http_service.checks.health]
-    grace_period = "10s"
+    grace_period = "30s"
     interval = "30s"
     method = "GET"
-    timeout = "10s"
-    path = "/api/v1/solo/health"
+    timeout = "15s"
+    path = "/health"
 
 # Machine configuration optimized for ML workload
 [[vm]]
