--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,3 +32,4 @@ sqlalchemy>=2.0.0
 alembic>=1.12.0
 asyncpg>=0.29.0  # PostgreSQL async driver
 aiosqlite>=0.19.0  # SQLite async driver
+greenlet>=3.0.0  # Required for SQLAlchemy async operations
