構文エラーを解消

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ backend/api/__pycache__/
 backend/models/__pycache__/
 backend/services/__pycache__/
 backend/sockets/__pycache__/
+backend/emoguchi.db
