neon構成に変更

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ backend/models/__pycache__/
 backend/services/__pycache__/
 backend/sockets/__pycache__/
 backend/emoguchi.db
+.ssh-cert.pub
+.ssh
+backend/alembic.ini
