--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -85,7 +85,7 @@ path_separator = os
 # other means of configuring database URLs may be customized within the env.py
 # file.
 # sqlalchemy.url will be set dynamically from config.py
-# sqlalchemy.url = sqlite:///./emoguchi.db
+# sqlalchemy.url = postgresql://neondb_owner:npg_OH5fYbW9KVnS@ep-noisy-glitter-a1bm1cc1-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
 
 [post_write_hooks]
