--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ python-socketio==5.9.0
 pydantic==2.5.0
 python-multipart==0.0.6
 python-dotenv==1.0.0
+redis>=4.5.0  # For Socket.IO Redis adapter (future scaling)
 
 # OpenAI API
 openai>=1.50.0
