fly.toml構成を変更

--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -13,8 +13,14 @@ primary_region = 'nrt'
   PORT = '8000'
   PYTHONUNBUFFERED = '1'
   STORAGE_TYPE = 's3'
+  KUSHINADA_MODEL_SOURCE = 'r2'
+  KUSHINADA_LOCAL_PATH = '/app/models/kushinada-hubert-large'
   # Socket.IO specific settings
   SOCKETIO_SINGLE_INSTANCE = 'true'
+
+[mounts]
+  source = "kushinada_models"
+  destination = "/app/models"
 
 [http_service]
   internal_port = 8000
